Add `APIToken` and `JSONPrompt` classes; enhance JSON handling and UI components
- Introduced `APIToken` for managing and validating API tokens with user-group relationships and data validations.
- Added `JSONPrompt` to support dynamic prompt generation using templates and parameterized values.
- Enhanced `JSONMap` with new sub-map creation, array handling, and normalization capabilities.
- Updated UI components such as `MinutesField`, `ComputedMinutesField`, and `ComputedDoubleField` to refine functionality and address issues.
- Improved inventory modules, including `POBrowser`, `PackingUnitBrowser`, and material handling workflows.
- Various code refactorings and minor enhancements across modules.